DIAM-818 Create configuration

--- a/Resources/config/reports.yml
+++ b/Resources/config/reports.yml
@@ -26,6 +26,16 @@ reports:
             type: repository
             repository: "Diamante\\DeskBundle\\Infrastructure\\Persistence\\DoctrineReportRepository::getTimeOfResponseReportWidgetData"
 
+    tickets_by_channels:
+        chart:
+            type: grouped-line-chart
+            x-axis: day
+            y-axis: data
+            group: source
+        source:
+            type: dql
+            dql: "select date(t.createdAt) as day, t.source as source, count(t.source) as data from Diamante\\DeskBundle\\Entity\\Ticket t GROUP BY t.source, day"
+
     tickets_by_channels_widget:
         chart:
             type: pie-chart
