DIAM-819 Create configuration

--- a/src/Diamante/DistributionBundle/Resources/config/navigation.yml
+++ b/src/Diamante/DistributionBundle/Resources/config/navigation.yml
@@ -49,6 +49,14 @@ oro_menu_config:
             extras:
                 routes: ['diamante_report_*']
 
+        diamante_report_tickets_by_branch:
+            label: 'Tickets by Branch'
+            route: diamante_report_view
+            routeParameters:
+                id: 'tickets_by_branch'
+            extras:
+                routes: ['diamante_report_*']
+
 #        dashboard_tab:
 #            display: false
         oro_calendar_view_default:
@@ -76,6 +84,7 @@ oro_menu_config:
                         diamante_report_tickets_by_priority: ~
                         diamante_report_time_of_response: ~
                         diamante_report_tickets_by_channels: ~
+                        diamante_report_tickets_by_branch: ~
                 diamante_config_tab:
                   children:
                     system_configuration: ~
