--- a/.travis.yml
+++ b/.travis.yml
@@ -7,22 +7,21 @@ php:
   - 7.0
   - hhvm
 
+sudo: false
+
 branches:
   only:
     - master
-
-env:
-  - SYMFONY_VERSION=2.3.*
 
 matrix:
   allow_failures:
     - php: 7.0
     - php: hhvm
 
-before_script:
+before_install:
   - if [[ "$TRAVIS_PHP_VERSION"  = "hhvm" ]]; then cat travis.php.ini >> /etc/hhvm/php.ini ; fi
   - if [[ "$TRAVIS_PHP_VERSION" != "hhvm" ]]; then phpenv config-add travis.php.ini ; fi
   - composer self-update
-  - composer require symfony/symfony:${SYMFONY_VERSION} --prefer-dist --dev -vvv
 
-script: phpunit
+install:
+  - composer install --prefer-source --profile
