--- a/composer.json
+++ b/composer.json
@@ -18,10 +18,6 @@
     "repositories": [
         {
             "type": "git",
-            "url": "https://github.com/eltrino/DiamanteEmailProcessingBundle.git"
-        },
-        {
-            "type": "git",
             "url": "https://github.com/orocrm/composer.git"
         }
     ],
@@ -30,8 +26,8 @@
         "oro/platform": "1.7.*",
         "beberlei/assert": "2.*",
         "zendframework/zend-mail": "2.1.*",
-        "ezyang/htmlpurifier": "4.6.0",
-        "bordeux/email-cleaner": "dev-master",
+        "ezyang/htmlpurifier": "4.6.*",
+        "bordeux/email-cleaner": "0.6.*",
         "michelf/php-markdown": "~1.4"
     },
     "require-dev": {
