DIAM-1038 enable Data Audit menu

--- a/src/Diamante/DistributionBundle/Resources/config/navigation.yml
+++ b/src/Diamante/DistributionBundle/Resources/config/navigation.yml
@@ -107,6 +107,7 @@ oro_menu_config:
                       children:
                         embedded_forms: ~
                     oro_platform_system_info: ~
+                    audit_list: ~
 
 
 
