--- a/Tests/Functional/phpunit.xml.dist
+++ b/Tests/Functional/phpunit.xml.dist
@@ -32,7 +32,7 @@
         </whitelist>
     </filter>
     <php>
-        <env name="AUTOLOAD_FIXTURES" value="ture"/>
+        <env name="AUTOLOAD_FIXTURES" value="true"/>
         <env name="CLASS_AUTOLOADER"  value="/../../../../../vendor/autoload.php"/>
         <env name="KERNEL_DIR" value="/../../../../../app"/>
     </php>
