--- a/Resources/config/datagrid.yml
+++ b/Resources/config/datagrid.yml
@@ -22,7 +22,7 @@ datagrid:
                 params:     [ id ]
             delete_link:
                 type:       url
-                route:      diamante_branch_delete
+                route:      diamante_branch_api_service_diamante_delete_branch
                 params:     [ id ]
         sorters:
             columns:
