--- a/Resources/config/automation.yml
+++ b/Resources/config/automation.yml
@@ -1,4 +1,10 @@
 entities:
-    - %diamante.ticket.entity.class%
-    - %diamante.comment.entity.class%
-    - %diamante.user.entity.class%
+    ticket:
+        entity: %diamante.ticket.entity.class%
+        processor: Diamante\AutomationBundle\Model\ListedEntity\Processor\TicketProcessor
+    comment:
+        entity: %diamante.comment.entity.class%
+        processor: Diamante\AutomationBundle\Model\ListedEntity\Processor\CommentProcessor
+    user:
+        entity: %diamante.user.entity.class%
+        processor: Diamante\AutomationBundle\Model\ListedEntity\Processor\UserProcessor
