--- a/Resources/config/datagrid.yml
+++ b/Resources/config/datagrid.yml
@@ -8,6 +8,7 @@ datagrid:
           - u.email
           - u.firstName
           - u.lastName
+          - (SELECT a.isActive FROM DiamanteUserBundle:ApiUser a WHERE a.email = u.email) as active
         from:
           - { table: %diamante.user.entity.class%, alias: u }
     properties:
@@ -32,30 +33,39 @@ datagrid:
           data_name: u.firstName
         lastName:
           data_name: u.lastName
+        active:
+          data_name: active
     columns:
       email:
-        label: diamante.user.email
+        label: diamante.user.labels.email
       firstName:
-        label: diamante.user.first_name
+        label: diamante.user.labels.first_name
       lastName:
-        label: diamante.user.last_name
+        label: diamante.user.labels.last_name
+      active:
+        label: diamante.user.labels.active
+        frontend_type: select
+        choices:
+          0: No
+          1: Yes
+          2: N/A
     actions:
       view:
         type: navigate
-        label: diamante.user.view
+        label: diamante.user.actions.view
         icon: eye-open
         link: view_link
         rowAction: true
         acl_resource: VIEW;Entity:DiamanteUserBundle:DiamanteUser
       update:
         type: navigate
-        label: diamante.user.update
+        label: diamante.user.actions.update
         icon: edit
         link: update_link
         acl_resource: EDIT;Entity:DiamanteUserBundle:DiamanteUser
       delete:
         type: delete
-        label: diamante.user.delete
+        label: diamante.user.actions.delete
         icon: trash
         link: delete_link
         acl_resource: DELETE;Entity:DiamanteUserBundle:DiamanteUser
