--- a/.travis.yml
+++ b/.travis.yml
@@ -25,3 +25,10 @@ before_install:
 
 install:
   - composer install --prefer-source --profile
+
+
+script: if [ "$TRAVIS_PHP_VERSION" != "7.0" ] && [ "$TRAVIS_PHP_VERSION" != "hhvm" ]; then phpunit --coverage-clover=coverage.clover; else phpunit; fi
+
+after_script:
+  - if [ -e coverage.clover ]; then wget https://scrutinizer-ci.com/ocular.phar; fi
+  - if [ -e coverage.clover ]; then php ocular.phar code-coverage:upload --format=php-clover coverage.clover; fi
