--- a/src/Diamante/DistributionBundle/Resources/config/whitelist.yml
+++ b/src/Diamante/DistributionBundle/Resources/config/whitelist.yml
@@ -34,6 +34,7 @@ whitelist:
     - 'oro_api_post_dashboard_widget_add_widget'
     - 'oro_api_put_dashboard_widget_positions'
     - 'oro_api_delete_dashboard_widget'
+    - 'oro_api_delete_dashboard'
 
     #Embedded Forms
     - 'diamante_embedded_form_submit'
