DIAM-1079 Link Change History does not work

--- a/src/Diamante/DistributionBundle/Resources/config/whitelist.yml
+++ b/src/Diamante/DistributionBundle/Resources/config/whitelist.yml
@@ -23,6 +23,7 @@ whitelist:
     - 'oro_translation_available_translations'
     - 'oro_translation_download'
     - 'oro_dataaudit_index'
+    - 'oro_dataaudit_history'
 
     #OroUserBundle
     - 'oro_activity_list_api_get_list'
