DIAM-1082 Wrong title of the reports page.

--- a/Resources/config/reports.yml
+++ b/Resources/config/reports.yml
@@ -1,5 +1,6 @@
 reports:
     tickets_by_priority:
+        label: "Tickets By Priority"
         chart:
             type: bar-chart
             y-axis: value
@@ -9,6 +10,7 @@ reports:
             dql: "SELECT t.priority, count(t.priority) as value FROM Diamante\\DeskBundle\\Entity\\Ticket t group by t.priority"
 
     time_of_response:
+        label: "Time of Response"
         chart:
             type: bar-chart
             y-axis: data_count
@@ -18,6 +20,7 @@ reports:
             repository: "Diamante\\DeskBundle\\Infrastructure\\Persistence\\DoctrineReportRepository::getTimeOfResponseReportData"
 
     time_of_response_widget:
+        label: "Time of Response"
         chart:
             type: bar-chart
             y-axis: data_count
@@ -27,6 +30,7 @@ reports:
             repository: "Diamante\\DeskBundle\\Infrastructure\\Persistence\\DoctrineReportRepository::getTimeOfResponseReportWidgetData"
 
     tickets_by_channels:
+        label: "Tickets By Channels"
         chart:
             type: grouped-line-chart
             x-axis: day
@@ -37,6 +41,7 @@ reports:
             dql: "select date(t.createdAt) as day, t.source as source, count(t.source) as data from Diamante\\DeskBundle\\Entity\\Ticket t GROUP BY t.source, day"
 
     tickets_by_channels_widget:
+        label: "Tickets By Channels"
         chart:
             type: pie-chart
             label: label
@@ -46,6 +51,7 @@ reports:
             dql: "select t.source as label, count(t.source) as data from  Diamante\\DeskBundle\\Entity\\Ticket t GROUP BY t.source"
 
     tickets_by_branch:
+        label: "Tickets By Branch"
         chart:
             type: grouped-line-chart
             x-axis: day
@@ -56,6 +62,7 @@ reports:
             dql: "select date(t.createdAt) as day, b.name as branch, count(t.branch) as data from Diamante\\DeskBundle\\Entity\\Ticket t LEFT JOIN Diamante\\DeskBundle\\Entity\\Branch b WITH b.id = t.branch GROUP BY t.branch, day"
 
     tickets_by_branch_widget:
+        label: "Tickets By Branch"
         chart:
             type: bar-chart
             y-axis: data
@@ -65,6 +72,7 @@ reports:
             dql: "select b.name as branch, count(t.branch) as data from Diamante\\DeskBundle\\Entity\\Ticket t LEFT JOIN Diamante\\DeskBundle\\Entity\\Branch b WITH b.id = t.branch GROUP BY t.branch"
 
     tickets_timeline:
+        label: "Tickets Timeline"
         chart:
             type: grouped-line-chart
             x-axis: day
