--- a/composer.json
+++ b/composer.json
@@ -59,5 +59,10 @@
         "branch-alias": {
             "dev-master": "1.1.x-dev"
         }
+    },
+    "require-dev": {
+        "phpunit/phpunit": "4.8.*",
+        "akeneo/batch-bundle": "0.4.2",
+        "eltrino/phpunit-mockannotations": "*"
     }
 }
