--- a/Resources/config/dashboard.yml
+++ b/Resources/config/dashboard.yml
@@ -4,35 +4,35 @@ oro_dashboard_config:
             label:      Tickets By priority
             route:      diamante_report_widget
             route_parameters: { id: tickets_by_priority }
-            description: Tickets By priority
+            description: See the full picture of requests according to their priorities and focus on core issues.
             icon:       bundles/orodashboard/img/quick_launchpad.png
 
         time_of_response_widget:
             label:      Time Of Response
             route:      diamante_report_widget
             route_parameters: { id: time_of_response_widget }
-            description: Time Of Response
+            description: Measure your efficiency by analyzing the average speed of response for new tickets.
             icon:       bundles/orodashboard/img/quick_launchpad.png
 
         tickets_by_channels_widget:
             label:      Tickets by Channels
             route:      diamante_report_widget
             route_parameters: { id: tickets_by_channels_widget }
-            description: Tickets by Channels
+            description: Find out which channels of ticket submitting are most actively used in your system (emails, web portal, embedded form or via a phone call).
             icon:       bundles/orodashboard/img/quick_launchpad.png
 
         tickets_by_branch_widget:
             label:      Tickets by Branch
             route:      diamante_report_widget
             route_parameters: { id: tickets_by_branch_widget }
-            description: Tickets by Branch
+            description: See how many tickets are created in each branch for certain periods or daily and use this data to analyze which branches are most actively used for ticket creation.
             icon:       bundles/orodashboard/img/quick_launchpad.png
 
         tickets_timeline:
             label:      Tickets TimeLine
             route:      diamante_report_widget
             route_parameters: { id: tickets_timeline }
-            description: Tickets TimeLine
+            description: Check how many tickets were opened and closed per day for a given time period.
             icon:       bundles/orodashboard/img/quick_launchpad.png
 
     dashboards:
