--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -19,7 +19,19 @@
             <directory suffix="Test.php">src/Diamante/UserBundle/Tests</directory>
         </testsuite>
     </testsuites>
-    
+
+    <filter>
+        <whitelist>
+            <directory>src</directory>
+            <exclude>
+                <directory>vendor</directory>
+                <directory>src/Diamante/Bundle/*Bundle/DataFixtures</directory>
+                <directory>src/Diamante/Bundle/*Bundle/Resources</directory>
+                <directory>src/Diamante/Bundle/*Bundle/Tests</directory>
+            </exclude>
+        </whitelist>
+    </filter>
+
     <php>
         <env name="AUTOLOAD_FIXTURES" value="true"/>
         <env name="CLASS_AUTOLOADER"  value="/../vendor/autoload.php"/>
