--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -25,9 +25,9 @@
             <directory>src</directory>
             <exclude>
                 <directory>vendor</directory>
-                <directory>src/Diamante/Bundle/*Bundle/DataFixtures</directory>
-                <directory>src/Diamante/Bundle/*Bundle/Resources</directory>
-                <directory>src/Diamante/Bundle/*Bundle/Tests</directory>
+                <directory>src/Diamante/*Bundle/DataFixtures</directory>
+                <directory>src/Diamante/*Bundle/Resources</directory>
+                <directory>src/Diamante/*Bundle/Tests</directory>
             </exclude>
         </whitelist>
     </filter>
