DIAM-1110 Update diamantedesk-application to support Symfony 2.7

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@
 /web/uploads/users/*
 /web/media/cache
 /web/build.js
+/app/cache/*
 /app/config/parameters.yml
 /app/config/parameters_test.yml
 *~
