--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -12,7 +12,10 @@ framework:
     form:            true
     csrf_protection: true
     validation:      { enable_annotations: true }
-    templating:      { engines: ['twig', 'php'] } #assets_version: SomeVersionScheme
+    templating:
+        engines: ['twig', 'php']
+        assets_version: %assets_version%
+        assets_version_format: %%s?version=%%s
     default_locale:           "%locale%"
     trusted_proxies:          ~
     session:
@@ -35,9 +38,6 @@ twig:
     globals:
         bap:
             layout:           ::base.html.twig  # default layout across all Oro bundles
-        ws:
-            port:             "%websocket_port%"
-            host:             "%websocket_host%"
 
 # Assetic Configuration
 assetic:
@@ -150,21 +150,10 @@ services:
          class:               Twig_Extensions_Extension_Intl
          tags:
              - { name: twig.extension }
-    doctrine.dbal.default.wrapped_connection:
-        factory_service:      doctrine.dbal.default_connection
-        factory_method:       getWrappedConnection
-        class:                PDO
     doctrine.metadata.cache:
         parent: oro.cache.abstract
         calls:
             - [ setNamespace, [ "doctrine.metadata.cache" ] ]
-    session.handler.pdo:
-        class:                Symfony\Component\HttpFoundation\Session\Storage\Handler\PdoSessionHandler
-        arguments:
-            - "@doctrine.dbal.default.wrapped_connection"
-            -
-              db_table:       oro_session
-              db_id_col:      id
 
 escape_wsse_authentication:
     authentication_provider_class: Oro\Bundle\UserBundle\Security\WsseAuthProvider
@@ -173,16 +162,6 @@ escape_wsse_authentication:
 genemu_form:
     select2: ~
     autocomplete: ~
-
-clank:
-    web_socket_server:
-        port:                 %websocket_port%                # The port the socket server will listen on
-        host:                 %websocket_host%                # (optional) The host ip to bind to
-    session_handler:          session.handler.pdo
-    periodic:
-        -
-            service:          "oro_wamp.db_ping"
-            time:             60000                           # the time in milliseconds between the "tick" function being called
 
 a2lix_translation_form:
     locales: [en, fr]
