--- a/app/config/parameters_test.yml.dist
+++ b/app/config/parameters_test.yml.dist
@@ -2,7 +2,7 @@ parameters:
     database_driver:        pdo_mysql
     database_host:          127.0.0.1
     database_port:          ~
-    database_name:          diamantedesk_app
+    database_name:          diamantedesk_test
     database_user:          root
     database_password:      root
 
@@ -14,11 +14,16 @@ parameters:
     mailer_password:        ~
 
     # WebSocket server config
-    websocket_host:         "127.0.0.1"
-    websocket_port:         8080
+    websocket_bind_address:  "0.0.0.0"  # The host IP the socket server will bind to
+    websocket_bind_port:     8080       # The port the socket server will listen on
+    websocket_frontend_host: "*"        # Websocket host the browser will connect to
+    websocket_frontend_port: 8080       # Websocket port the browser will connect to
+    websocket_backend_host:  "*"        # Websocket host the application server will connect to
+    websocket_backend_port:  8080       # Websocket port the application server will connect to
 
     session_handler:        ~
 
     locale:                 en
     secret:                 ThisTokenIsNotSoSecretChangeIt
     installed:              ~
+    assets_version:         ~
