--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
         "php": ">=5.4.4",
         "oro/platform": "1.8.*",
         "beberlei/assert": "2.*",
-        "zendframework/zend-mail": "2.1.*",
+        "zendframework/zend-mail": "~2.1.5",
         "ezyang/htmlpurifier": "4.6.*",
         "bordeux/email-cleaner": "0.6.*",
         "michelf/php-markdown": "~1.4"
