DIAM-1110 Update demendencies to fix issues with installing desk bundle

--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,7 @@
         "php": ">=5.4.4",
         "oro/platform": "1.8.*",
         "beberlei/assert": "2.*",
+        "zendframework/zend-mail": "~2.1.5",
         "diamante/email-processing-bundle": "self.version",
         "diamante/api-bundle": "self.version",
         "diamante/user-bundle": "self.version"
