--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -18,7 +18,7 @@ _imagine:
 oro_default:
     pattern:  /
     defaults:
-        _controller: DiamanteDeskBundle:Ticket:list
+        _controller: OroDashboardBundle:Dashboard:view
 
 oro_auto_routing:
     resource: .
