--- a/Resources/config/datagrid.yml
+++ b/Resources/config/datagrid.yml
@@ -5,12 +5,12 @@ datagrid:
             query:
                 select:
                     - w.id
-                    - w.action
+                    - w.condition
                 from:
                     - { table: %diamante_automation.workflow_rule.entity.class%, alias: w }
                 where:
                     and:
-                        - w.expression is not null
+                        - w.parent is null
         properties:
             id: ~
             view_link:
@@ -26,33 +26,33 @@ datagrid:
                 route:      diamante_automation_delete
                 params:     [ id ]
         columns:
-            action:
-                label: diamante.desk.branch.columns.branch_key
+            condition:
+                label: diamante.automation.rule.columns.name
         actions:
             view:
                 type:          navigate
-                label:         diamante.desk.branch.actions.view
+                label:         diamante.automation.rule.actions.view
                 icon:          eye-open
                 link:          view_link
                 rowAction:     true
                 acl_resource:  VIEW;Entity:DiamanteAutomationBundle:WorkflowRule
             update:
                 type:          navigate
-                label:         diamante.desk.branch.actions.edit
+                label:         diamante.automation.rule.actions.edit
                 icon:          edit
                 link:          update_link
                 acl_resource:  EDIT;Entity:DiamanteAutomationBundle:WorkflowRule
             delete:
                 type:          delete
-                label:         diamante.desk.branch.actions.remove
+                label:         diamante.automation.rule.actions.remove
                 icon:          trash
                 link:          delete_link
                 acl_resource:  DELETE;Entity:DiamanteAutomationBundle:WorkflowRule
         mass_actions:
             delete:
                 type:               delete
-                label :             diamante.desk.branch.actions.remove_mass
+                label :             diamante.automation.rule.actions.remove_mass
                 acl_resource:       DELETE;Entity:DiamanteAutomationBundle:WorkflowRule
-                entity_name:        DiamanteAutomationBundle:Branch
+                entity_name:        DiamanteAutomationBundle:WorkflowRule
                 data_identifier:    w.id
                 icon:               trash
